<resources>
    <string name="app_name">Laboratorio05</string>
    <string name="action_settings">Settings</string>
    <string name="btn_finalizar">Finalizar!</string>
    <string name="btn_editar">Editar</string>
    <string name="tb_on_trabajando">trabajando....</string>
    <string name="tb_off_trabajar">trabajar...</string>
    <string name="separador">/</string>
    <string name="btn_borrar">Borrar</string>
    <string name="action_usuario">Usuario</string>
    <string name="action_desvios">Desvíos</string>
    <string name="titulo_tarea_con_desvio">Desvíos en la planificación</string>
    <string name="tareas_con_desvios_btn_buscar">Buscar</string>
    <string name="chkbox_finalizada">Finalizada</string>
</resources>
